SET(SUBNAME gl3)
ADD_LIBRARY(${SUBNAME} SHARED)
CMAKE_POLICY(SET CMP0076 NEW) # CMakeが自動的に相対パスを絶対パスへ変換する
TARGET_SOURCES(${SUBNAME} PRIVATE
    wgl_context.cpp
    gl3_renderer.cpp
    )
TARGET_INCLUDE_DIRECTORIES(${SUBNAME} PRIVATE
    .
    ../glew
    )
TARGET_COMPILE_DEFINITIONS(${SUBNAME} PRIVATE
    IM3D_VERTEX_ALIGNMENT=16
    )
TARGET_LINK_LIBRARIES(${SUBNAME}
    glew
    )
