SET(SUBNAME im3d)
ADD_LIBRARY(${SUBNAME} SHARED)
CMAKE_POLICY(SET CMP0076 NEW) # CMakeが自動的に相対パスを絶対パスへ変換する
TARGET_SOURCES(${SUBNAME} PRIVATE
    im3d.cpp
    im3d_newframe.cpp
    )
TARGET_COMPILE_OPTIONS(${SUBNAME} PRIVATE
    /std:c++latest 
    /EHsc
    )
TARGET_INCLUDE_DIRECTORIES(${SUBNAME} PRIVATE
    .
    ../glew
    ../gl3
    )
TARGET_COMPILE_DEFINITIONS(${SUBNAME} PRIVATE
    IM3D_VERTEX_ALIGNMENT=16
    )
TARGET_LINK_LIBRARIES(${SUBNAME} PRIVATE
    glew
    )
